--- a/mypage.html
+++ b/mypage.html
@@ -14,7 +14,7 @@
       <div class="menu-container">
         <ul>
           <li>
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="subpage.html">Recipe</a>
