--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <h2>RECIPES ARE FOR...</h2>
         <p>Big brawl in kitchen. Who takes it? Winner gets to take home the desserts! Losers can wave goodbye!</p>
       </div>
-        <button class="recipe-button">RECIPE</button>
+        <button class="plating-button">RECIPE</button>
       </div>
 
       <div class="text-content content_area_swap">
@@ -288,7 +288,7 @@
         <h2>MEATS - HOW TO BASTE</h2>
         <p>Big brawl in kitchen. Who takes it? Winner gets to take home the desserts! Very scrumptious!</p>
       </div>
-        <button class="guides-button">GUIDES</button>
+        <button class="plating-button">GUIDES</button>
       </div>
 
       <div class="image-content content_area_swap">
