--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="todays_recipes_content ">
         <div class="todays_recipes_content_block">
           <div class="todays_recipes_content_block_image">
-            <img src="https://s3-alpha-sig.figma.com/img/0ca5/675b/b385cc3f59028e947de2c1664edab663?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=e124JFiflu7TX9s6ZPzzJM3VdZxl40IBbpBPn~skJhpzn2pcwtkDFZCUcFCPfbpuwgkMJxFZUGIQYXWBg3N5crUZI2AILyPqJjP0~DhJlOyvo-vmHv~PvADccdCi4w8w869dZplfZZ6qeW4ThMkProcpR6PrgWzvclXldgsyn7FGHF190fkWz1MNzCsa4cDgMcUnePFOGbOOv9ZH~LIfPJoa8VAfoE6dvfFsUUpFryVCuujGI7tRCfVQlsEQ6MJXl9xVNOs5LpSxOAzvI7~bQLbC6wTSZ5L~8DKUzJ0al~SC~tRoHi7bh4zORjLn064IMDiORVmY3cLlRWclYcWSxw__" alt="">
+            <img src="images/crabplate.png" alt="">
           </div>
           <div class="todays_recipes_content_block_text">
             <div class="todays_recipes_content_block_text_top">
@@ -102,7 +102,7 @@
         </div>
         <div class="todays_recipes_content_block">
           <div class="todays_recipes_content_block_image">
-            <img src="https://s3-alpha-sig.figma.com/img/0da1/266c/a0240a8334f162df27a0d9e3b7f6fc4f?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=oBq6v22XS~AbbmR4A3VQpFku3Z5EXTmfEoUG7ZhUgLI1KF3DVShTVLZeMIwPQ6w-V~0RHvaQssRICqbEs209~u459BPml2-pTQ8xCxKPU1awbexkvBzyQygAf9rJhLGgLERjm8f1ZmP0Np0RTa9NDy4W0iMWPqQWzurCr7gIpOreSbA0YxQKxBCOeCrgt4-3j2aw~UQ84AiU97SVeHTvJ85DHcFvr82poBxh95dCN-YeD8xlR4oqX4OdCiEODEuEIN5HNhvzFUa0pg~DwCfcH9u3Jr50Sm5HJDOJSNTFEbj7w-HTW9ziq4WsGDTO~Hzefflun8lUfKJ5E2MzT1rkKw__" alt="">
+            <img src="images/cupcake.png" alt="">
           </div>
           <div class="todays_recipes_content_block_text">
             <div class="todays_recipes_content_block_text_top">
@@ -127,7 +127,7 @@
         </div>
         <div class="todays_recipes_content_block">
           <div class="todays_recipes_content_block_image">
-            <img src="https://s3-alpha-sig.figma.com/img/2ca5/1512/065ec45906eaa1f02310718987f6aa37?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ketHsFu2ZU3rGpL9uNXbI6XNRuj~ogT47DaYAAEWdaAOEmFxHriA306HbcCWyvjbjiw~1ZEyOYJfI3QOEGjDTQFo9~lh4GQBoGuFB6lYK-lsT2eBqvoMaz1BGDCk837KY1F6pxE0mvrgEjCyjVFL2~SgeUAnlHuZZLKsvG07YIG0u2xzq4fCQbNLnP3k0ZCa9zRYtsoWRNQHGU3S16d35r2OffIhA3KfXZC0otZ6SrU0Q7H7YmqSoboIxHB9jkH3Dnt-x2dBn7pnvMAQ7GkJXPo8IS0Owk2xsy6YeNS84bjtzikwCotHQwoSYUvlD2GwBYGjt1Ol2tqTetU0IRIerA__" alt="">
+            <img src="images/spicymeat.png" alt="">
           </div>
           <div class="todays_recipes_content_block_text">
             <div class="todays_recipes_content_block_text_top">
@@ -266,11 +266,11 @@
     
       
       <div class="image-content content_area_swap">
-        <img src="https://s3-alpha-sig.figma.com/img/82b0/49c8/a2098b07414c979d2df668dbbc7cd9cd?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=d-BVmkAAGFAXPTzTk5hHxnrV0PfpK5-LsnS4ncB3fbszAIaG1PyJqVk1gCDpfAC8mNptuZrCMxBbkGHHqh0JqFHZzp2d5Uk9kI0IapHEUII~q9NO9SoSJXhASlxhzMjHz-ebiZlTYhTL2XYrF6HANrn7WujzNUpdJyjKbmkIRM05EfhstqLnsKYsC1t4jNv-~Fc~TfwSVi8zman7WB6PxnkQeYGlRr-KiUYNrsaCu~fkQA-fpTgJnc1aMj5wK2qCRN1T54HEMfRMsO48SJrHhPWuKzCBrpJbgRhOj8CDP~cD0CdeStjzAI-JMPONKgLpYvy3ODULWN7jEpe9EihVBQ__" alt="Plating example">
+        <img src="images/tomatoimage.png" alt="">
       </div>
 
       <div class="image-content content_area_swap">
-        <img src="https://s3-alpha-sig.figma.com/img/6998/cb5c/6dc02ad247c7559aa3baa0371f5f1b48?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=gvYecgW352CASEbIh9czsPbfk91A2D2KHgPeSbN8DrKFXt0wgWqSAdVOt8mRr7ZevFoNo8ml2vA7HyJvbakx5i2m0-tf86yIe4~7gBplbXygOMDMPsbiDaCcpQStnCtj~d4nguEi9DCsMZ967rMXBruvVH6iTxJVYNeoAN~6ESa7WpmMuzLCTuITKhpK4kI0SeUhP78J5VB~jImee2Wi2slAYyNMyAeVWlarkun2ZG6TarMoaOCSc1Q-LjfqDT4wC8c-tM5cWsGSo3GFT6XZAqUkVYQunSk03bHlOuKGB1c-CrbNHbAvDE~6JFF8kAOKjVbFFns4e5ajtvAdxxRq-Q__" alt="Recipies are for">
+        <img src="images/notepicture.png" alt="">
       </div>
 
       <div class="text-content  content_area_swap">
@@ -292,7 +292,7 @@
       </div>
 
       <div class="image-content content_area_swap">
-        <img src="https://s3-alpha-sig.figma.com/img/f4f2/3a31/58058e8efdd26ecf7928723dfb7b3718?Expires=1732492800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Kgac511iSp2bgY2zhzJ4VVCl2O2j10q-QvWnL6M5FeqS6kP-QZsLwOVwBDqFxIGJ9BgIiacII~FJlBM-xNTH2J9Zss9hSYFEds8XLVe0cWfHP9FMKrb7kguVZOI5Pb7EXUfHbxRqyzqYC4a3n5qG3POpCWY0AST0ju3Rq9kLvgguQmZAJv-2FndZPuL96WMt6dhQJEsvK~Fk8wlf5tOJW6n37Ot36qfPH4vRxyHXKtkYAPmTWGrsbELjZwAjy1gj0PMbCJ~7x9xQzihJkuX8-Yydha7TxaZyy-PvmtKeSG-RtVcDpsKXsM2b~BfcnACH7MKezZgAlqDYI21X~t41sg__" alt="Chef">
+        <img src="images/cookpicture.png" alt="">
       </div>
 
 
